reafctor : thermometerRegister and thresholdConstant module
