# middleware/thermometerRegisterSchema.js
@@ -4,12 +4,15 @@ module.exports = {
     create: () =>{
         return Joi.object({
             thermometerId: Joi.string().required(),
+            threshold: Joi.string().required(),
         });
     },
 
     update: () =>{
         return Joi.object({
-            thermometerId: Joi.string().required(),
+            thermometerId: Joi.string(),
+            threshold: Joi.string(),
+            organization: Joi.string().required(),
         });
     },
 };
