# src/controllers/thermometerRegisterController.js
@@ -1,18 +1,60 @@
 const Organization = require("../model/organization");
 const referralCodeGenerator = require("referral-code-generator");
+const { MESSAGE } = require("../../utils/constant");
 
 /********************* create  **************** */
-const create = (model) => async(req, res)=>{console.log("::::::::::::", req.body, res.local.organization);
+const create = (model) => async(req, res)=>{
     try {
-        const orgId = res.local.organization;
-        req.body.organization = orgId;
-        const orgName = await Organization.findOne({ _id: orgId });
-        const date = new Date();
+        const info = await model.findOne({ thermometerId: req.params.thermometerId });
+        if(info){
+            return res.status(404).send({ data: MESSAGE.DATA_ALREADY_EXIST });
+        }
         const random = referralCodeGenerator.alphaNumeric("uppercase", 1, 2);
-        const name = `${orgName.name}-${date.getFullYear()}-${date.getMonth()}-${random}`;
+        const date = new Date();
+        const name = `${date.getFullYear()}-${date.getMonth()+1}-${random}`;
         req.body.name = name;
         const result = await model.create(req.body);
+        return res.status(200).json({ data: result });
+    } catch (error) {
+        return res.status(500).send({ data: error.message });
+    }
+};
+
+/********************* create  **************** */
+const update = (model) => async(req, res)=>{
+    try {
+        let info = await model.findOne({ thermometerId: req.params.thermometerId }).lean();
+        if(!info){
+            return res.status(404).send({ data: MESSAGE.DATA_NOT_FOUND });
+        }
+        const orgName = await Organization.findOne({ _id: req.body.organization });
+        const name = `${orgName.name}-${info.name}`;
+        req.body.name = name;
+        const body = req.body;
+        info = {
+            ...info,
+            body,
+            organization: req.body.organization
+        };
+        const result = await model.findOneAndUpdate({ _id: info._id }, info, { new : true });
         return res.status(200).json({ data: result, });
+    } catch (error) {
+        return res.status(500).send({ data: error.message });
+    }
+};
+
+
+/********************* get by id **************** */
+const get = (model) => async(req, res)=>{
+    try {
+        let query = {
+            thermometerId: req.params.thermometerId,
+        };
+        const result =  await model.findOne(query).populate("threshold");
+        if(!result){
+            return res.status(404).send({ data: MESSAGE.DATA_NOT_FOUND });
+        }
+        return res.status(200).json({ data: result });
     } catch (error) {
         return res.status(500).send({ data: error.message });
     }
@@ -21,10 +63,16 @@ const create = (model) => async(req, res)=>{console.log("::::::::::::", req.body
 /********************* get all  **************** */
 const getAll = (model) => async(req, res)=>{
     try {
-        let query = {
-            organization: res.local.organization,
-        };
-        let result =  await model.find(query).populate("organization",["name"]);
+        let query;
+        if(res.local.role === "SUPER_ADMIN"){
+            query = {
+            };
+        }else{
+            query = {
+                organization: res.local.organization,
+            };
+        }
+        let result =  await model.find(query).populate("threshold");
         return res.status(200).json({ data: result });
     } catch (error) {
         return res.status(500).send({ data: error.message });
@@ -34,4 +82,6 @@ const getAll = (model) => async(req, res)=>{
 module.exports = ( model ) => ({
     create: create(model),
     getAll: getAll(model),
+    update: update(model),
+    getById: get(model),
 });
