# src/routes/thermometerRegisterRoutes.js
@@ -1,6 +1,5 @@
 const router = require("express").Router();
 require("dotenv").config();
-const controller = require("../controllers/CRUDController");
 const thermoController = require("../controllers/thermometerRegisterController");
 const validationMiddleware = require("../../config/schemaValidation");
 const validateParams = require("../../middleware/thermometerRegisterSchema");
@@ -27,19 +26,19 @@ router.get(
 
 /************ get by id ******** */
 router.get(
-    "/thermometerRegister/:id",
+    "/thermometerRegister/:thermometerId",
     authenticate.verifyUser,
     authenticate.permissionAuth(PERMS.FETCH_THERMOMETER),
-    controller(ThermometerRegister).getById
+    thermoController(ThermometerRegister).getById
 );
 
 /************ update ******** */
 router.put(
-    "/thermometerRegister/:id",
+    "/thermometerRegister/:thermometerId",
     authenticate.verifyUser,
     authenticate.permissionAuth(PERMS.UPDATE_THERMOMETER),
     validationMiddleware(validateParams.update()),
-    controller(ThermometerRegister).update
+    thermoController(ThermometerRegister).update
 );
 
 module.exports = router;
